# django-rest-live

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  setup.py  tox.ini  version.sh
.circleci/: config.yml
.github/cdk/: .gitignore  main.ts  package.json
.github/workflows/: cdkactions_build-and-publish.yaml  cdkactions_validate.yaml
docs/: api.md  index.md  installation.md  mixin.md  router.md  signals.md  testing.md  usage.md
rest_live/: __init__.py  apps.py  consumers.py  decorators.py  mixins.py  routers.py  signals.py  subscriptionsets.py  testing.py
test_app/: models.py  serializers.py  subscriptions.py  views.py
test_app/migrations/: 0001_initial.py  0002_uuidtodo.py
tests/: asgi.py  routing.py  settings.py  test_basic.py  test_live.py  test_permissions.py  utils.py
