[tool.poetry]
name = "django-rest-live"
version = "0.5.0"
description = "Subscriptions for Django REST Framework over Websockets."
authors = ["Penn Labs <contact@pennlabs.org>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pennlabs/django-rest-live"
repository = "https://github.com/pennlabs/django-rest-live"
documentation = "https://django-rest-live.readthedocs.io/en/latest/"
classifiers = [
    "Framework :: Django",
]
include = ["CHANGELOG.md", "LICENSE"]
exclude = ["tox.ini"]
packages = [
    { include = "rest_live" },
]

[tool.poetry.dependencies]
python = "^3.7"
Django = ">=2.2"
channels = ">=2.0.0"
djangorestframework = "^3.12.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.9.0"
flake8-isort = "^4.0.0"
flake8-quotes = "^3.2.0"
flake8-absolute-import = "^1.0"
pytest = "^6.2.3"
pytest-cov = "^2.11.1"
pytest-django = "^4.1.0"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
